img overflow fix

--- a/frontend/src/general-style.css
+++ b/frontend/src/general-style.css
@@ -298,15 +298,17 @@
 	}
 
 	.fill {
+		max-width: 100%;
 	    display: flex;
 	    justify-content: center;
 	    position: relative;
 	    align-items: center;
 	    overflow: hidden
 	}
+
 	.fill img {
 	    flex-shrink: 0;
-	    min-width: 100%;
+	    max-width: 100%;
 	    height: 450px;
 	    object-fit: cover;
 	}
@@ -431,9 +433,14 @@
 		padding-left: 15px;
 	}
 	.section-featured-articles .section-article-excerpt-img img {
+		max-width: 100%;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+	}
+	
+	img {
+		max-width: 100%;
 	}
 }
 
